# PyPSA-to-GEMS-Converter

./: .pre-commit-config.yaml  AUTHORS.txt  INSTRUCTIONS_RUN_PIPELINE.md  README.md  base_s_11_elec_custom_2_nl.nc  config_pypsa_eur.yaml  dependencies.json  network_168_30_extendable_gen_nl.nc  network_168_60_extendable_gen_nl.nc  network_168_60_s_nl.nc  pyproject.toml  pypsa_eur_dependencies.json  requirements-dev.txt  requirements.txt
.github/workflows/: code-quality.yml  e2e-tests.yml  tests.yml  unit-tests.yml
pypsa_eur_gen/: __init__.py  dependencies.py  docker_check.py  run_generation.py
resources/pypsa_models/: pypsa_models.yaml  pypsa_models.yml
resources/test_files/: ac-dc-data_nl.nc  base_s_11_elec_custom_1_nl.nc  base_s_11_elec_custom_3_nl.nc  base_s_11_elec_nl.nc  base_s_20_elec_custom1_nl.nc  base_s_20_elec_nl.nc  base_s_6_elec_lvopt__nl.nc  france_clusters_50_snapshots_365_period_one_year.nc  france_clusters_80_snapshots_8760_period_one_week.nc  network_1680_30_nl.nc  network_168_10_extendable_gen_nl.nc  network_168_10_s_nl.nc  network_168_30_nl.nc  network_168_30_s_nl.nc  network_168_nl.nc  network_336_10_s_nl.nc  network_336_30_s_nl.nc  network_336_60_s_nl.nc  network_672_10_s_nl.nc
src/: __init__.py  dependencies.py  gems_model_builder.py  gems_study_writer.py  parsing.py  pypsa_converter.py  pypsa_preprocessor.py  pypsa_register.py  utils.py  utils_parsing.py
src/models/: __init__.py  modified_base_model.py
src/tests/: __init__.py  utils.py
tests/: __init__.py  utils.py
tests/e2e-2-stage-stochastic/: test_2_stage_stochastic_study.py
(+72 files in other folders)
